fixing day alignment issues

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -70,6 +70,11 @@ span.green {
   text-align: left;
 }
 
+.day span {
+  padding-left: 5px;
+  font-weight: bold;
+}
+
 .offset-day {
   background-color: white;
 }
@@ -77,6 +82,7 @@ span.green {
 .day-name {
   display: inline-block;
   width: 100px;
+  margin: 1px;
   float: left;
   font-weight: bold;
 }
